--- a/package.json
+++ b/package.json
@@ -5,13 +5,6 @@
   "dependencies": {
     "@material-ui/core": "^4.3.2",
     "@material-ui/icons": "^4.2.1",
-    "@types/jest": "24.0.18",
-    "@types/lodash": "^4.14.138",
-    "@types/node": "12.7.2",
-    "@types/react": "16.9.2",
-    "@types/react-dom": "16.9.0",
-    "@types/react-redux": "^7.1.2",
-    "@types/redux-logger": "^3.0.7",
     "axios": "^0.19.0",
     "classnames": "^2.2.6",
     "lodash": "^4.17.15",
@@ -25,13 +18,15 @@
     "redux-persist": "^5.10.0",
     "redux-thunk": "^2.3.0",
     "typescript": "3.5.3",
-    "uuid": "^3.3.2"
+    "uuid": "^3.3.2",
+    "react-router-dom": "^5.0.1",
+    "simple-react-validator": "^1.2.2"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "test-ci": "cross-env CI=true npm run test"
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -47,5 +42,24 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@types/enzyme": "^3.10.3",
+    "@types/enzyme-adapter-react-16": "^1.0.5",
+    "@types/jest": "^24.0.18",
+    "@types/lodash": "^4.14.138",
+    "@types/node": "12.7.2",
+    "@types/react": "16.9.2",
+    "@types/react-dom": "16.9.0",
+    "@types/react-redux": "^7.1.2",
+    "@types/react-router-dom": "^4.3.5",
+    "@types/redux-logger": "^3.0.7",
+    "@types/redux-mock-store": "^1.0.1",
+    "@types/uuid": "^3.4.5",
+    "cross-env": "^5.2.0",
+    "enzyme": "^3.10.0",
+    "enzyme-adapter-react-16": "^1.14.0",
+    "enzyme-to-json": "^3.4.0",
+    "redux-mock-store": "^1.5.3"
   }
 }
